# stax

./: .gitignore  README  SDL_ext.c  SDL_ext.h  board.h  default.nix  makefile  meson.build  piece.c  piece.h  stax.c  stax.h
.github/workflows/: build.yaml
include/: SDL_ext.h  board.h  piece.h  score.h  stax.h  ui_number.h
src/: SDL_ext.c  board.c  piece.c  score.c  stax.c  ui_number.c
